blpapi-sys/src/bindings.rs

extern "C" {
    pub fn blpapi_SessionOptions_removeServerAddress(
        parameters: *mut blpapi_SessionOptions_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setConnectTimeout(
        parameters: *mut blpapi_SessionOptions_t,
        timeoutInMilliseconds: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setDefaultServices(
        parameters: *mut blpapi_SessionOptions_t,
        defaultServices: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setDefaultSubscriptionService(
        parameters: *mut blpapi_SessionOptions_t,
        serviceIdentifier: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setDefaultTopicPrefix(
        parameters: *mut blpapi_SessionOptions_t,
        prefix: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setAllowMultipleCorrelatorsPerMsg(
        parameters: *mut blpapi_SessionOptions_t,
        allowMultipleCorrelatorsPerMsg: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setClientMode(
        parameters: *mut blpapi_SessionOptions_t,
        clientMode: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setMaxPendingRequests(
        parameters: *mut blpapi_SessionOptions_t,
        maxPendingRequests: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setAutoRestartOnDisconnection(
        parameters: *mut blpapi_SessionOptions_t,
        autoRestart: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setAutoRestart(
        parameters: *mut blpapi_SessionOptions_t,
        autoRestart: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setAuthenticationOptions(
        parameters: *mut blpapi_SessionOptions_t,
        authOptions: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setNumStartAttempts(
        parameters: *mut blpapi_SessionOptions_t,
        numStartAttempts: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setMaxEventQueueSize(
        parameters: *mut blpapi_SessionOptions_t,
        maxEventQueueSize: usize,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setSlowConsumerWarningHiWaterMark(
        parameters: *mut blpapi_SessionOptions_t,
        hiWaterMark: f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setSlowConsumerWarningLoWaterMark(
        parameters: *mut blpapi_SessionOptions_t,
        loWaterMark: f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setDefaultKeepAliveInactivityTime(
        parameters: *mut blpapi_SessionOptions_t,
        inactivityMsecs: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setDefaultKeepAliveResponseTimeout(
        parameters: *mut blpapi_SessionOptions_t,
        timeoutMsecs: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setKeepAliveEnabled(
        parameters: *mut blpapi_SessionOptions_t,
        isEnabled: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setRecordSubscriptionDataReceiveTimes(
        parameters: *mut blpapi_SessionOptions_t,
        shouldRecord: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setServiceCheckTimeout(
        paramaters: *mut blpapi_SessionOptions_t,
        timeoutMsecs: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setServiceDownloadTimeout(
        paramaters: *mut blpapi_SessionOptions_t,
        timeoutMsecs: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_setTlsOptions(
        paramaters: *mut blpapi_SessionOptions_t,
        tlsOptions: *const blpapi_TlsOptions_t,
    );
}
extern "C" {
    pub fn blpapi_SessionOptions_setFlushPublishedEventsTimeout(
        paramaters: *mut blpapi_SessionOptions_t,
        timeoutMsecs: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_serverHost(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn blpapi_SessionOptions_serverPort(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn blpapi_SessionOptions_numServerAddresses(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_getServerAddress(
        parameters: *mut blpapi_SessionOptions_t,
        serverHost: *mut *const ::std::os::raw::c_char,
        serverPort: *mut ::std::os::raw::c_ushort,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_connectTimeout(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn blpapi_SessionOptions_defaultServices(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn blpapi_SessionOptions_defaultSubscriptionService(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn blpapi_SessionOptions_defaultTopicPrefix(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn blpapi_SessionOptions_allowMultipleCorrelatorsPerMsg(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_clientMode(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_maxPendingRequests(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_autoRestartOnDisconnection(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_autoRestart(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_authenticationOptions(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn blpapi_SessionOptions_numStartAttempts(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_maxEventQueueSize(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> usize;
}
extern "C" {
    pub fn blpapi_SessionOptions_slowConsumerWarningHiWaterMark(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> f32;
}
extern "C" {
    pub fn blpapi_SessionOptions_slowConsumerWarningLoWaterMark(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> f32;
}
extern "C" {
    pub fn blpapi_SessionOptions_defaultKeepAliveInactivityTime(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_defaultKeepAliveResponseTimeout(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_keepAliveEnabled(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_recordSubscriptionDataReceiveTimes(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_serviceCheckTimeout(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_serviceDownloadTimeout(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_print(
        parameters: *mut blpapi_SessionOptions_t,
        streamWriter: blpapi_StreamWriter_t,
        stream: *mut ::std::os::raw::c_void,
        indentLevel: ::std::os::raw::c_int,
        spacesPerLevel: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SessionOptions_flushPublishedEventsTimeout(
        parameters: *mut blpapi_SessionOptions_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct blpapi_SubscriptionList {
    _unused: [u8; 0],
}
pub type blpapi_SubscriptionList_t = blpapi_SubscriptionList;
extern "C" {
    pub fn blpapi_SubscriptionList_create() -> *mut blpapi_SubscriptionList_t;
}
extern "C" {
    pub fn blpapi_SubscriptionList_destroy(list: *mut blpapi_SubscriptionList_t);
}
extern "C" {
    pub fn blpapi_SubscriptionList_add(
        list: *mut blpapi_SubscriptionList_t,
        subscriptionString: *const ::std::os::raw::c_char,
        correlationId: *const blpapi_CorrelationId_t,
        fields: *mut *const ::std::os::raw::c_char,
        options: *mut *const ::std::os::raw::c_char,
        numfields: usize,
        numOptions: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SubscriptionList_addResolved(
        list: *mut blpapi_SubscriptionList_t,
        subscriptionString: *const ::std::os::raw::c_char,
        correlationId: *const blpapi_CorrelationId_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SubscriptionList_clear(
        list: *mut blpapi_SubscriptionList_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SubscriptionList_append(
        dest: *mut blpapi_SubscriptionList_t,
        src: *const blpapi_SubscriptionList_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SubscriptionList_size(
        list: *const blpapi_SubscriptionList_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SubscriptionList_correlationIdAt(
        list: *const blpapi_SubscriptionList_t,
        result: *mut blpapi_CorrelationId_t,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SubscriptionList_topicStringAt(
        list: *mut blpapi_SubscriptionList_t,
        result: *mut *const ::std::os::raw::c_char,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SubscriptionList_isResolvedAt(
        list: *mut blpapi_SubscriptionList_t,
        result: *mut ::std::os::raw::c_int,
        index: usize,
    ) -> ::std::os::raw::c_int;
}
pub type blpapi_EventHandler_t = ::std::option::Option<
    unsafe extern "C" fn(
        event: *mut blpapi_Event_t,
        session: *mut blpapi_Session_t,
        userData: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    pub fn blpapi_Session_create(
        parameters: *mut blpapi_SessionOptions_t,
        handler: blpapi_EventHandler_t,
        dispatcher: *mut blpapi_EventDispatcher_t,
        userData: *mut ::std::os::raw::c_void,
    ) -> *mut blpapi_Session_t;
}
extern "C" {
    pub fn blpapi_Session_destroy(session: *mut blpapi_Session_t);
}
extern "C" {
    pub fn blpapi_Session_start(session: *mut blpapi_Session_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_startAsync(session: *mut blpapi_Session_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_stop(session: *mut blpapi_Session_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_stopAsync(session: *mut blpapi_Session_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_nextEvent(
        session: *mut blpapi_Session_t,
        eventPointer: *mut *mut blpapi_Event_t,
        timeoutInMilliseconds: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
